<resources>
    <string name="app_name">Composition</string>
    <string name="text_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число. \n\n Пример: в верхнем круге число 7, в одно из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3+4 = 7</string>
    <string name="text_title">Состав числа</string>
    <string name="get_it_text">Понятно</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Нормальный</string>
    <string name="hard_level">Тяжёлый</string>
    <string name="question"> \? </string>
    <string name="answers_progress">Правильных ответов %s (минимум %s)</string>
    <string name="required_answers">Необходимое кол-во правильных ответов: %s</string>
    <string name="current_score">Ваш счет: %s</string>
    <string name="need_percent_answers">Необходимый процент правильных ответов %s</string>
    <string name="percente_of_right_answers">Процент правильных ответов: %s</string>
</resources>